--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,22 @@ jobs:
         with:
           go-version: "1.24.0"
 
-      - name: Run tests
+      - name: Run test suite
         run: go test -v --cover ./...
+
+  style:
+    name: Style
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24.0"
+
+      - name: Check formatting
+        run: test -z $(go fmt ./...)
+
