--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,12 @@ jobs:
         with:
           go-version: "1.24.0"
 
+      - name: Install linter
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Check formatting
         run: test -z $(go fmt ./...)
+
+      - name: Run linter
+        run: staticcheck -f=stylish ./...
 
