--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
+      - name: Check Out Code
         uses: actions/checkout@v4
 
       - name: Set up Go
@@ -34,12 +34,9 @@ jobs:
         with:
           go-version: "1.24.0"
 
-      - name: Install linter
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
-      - name: Check formatting
+      - name: Check Formatting
         run: test -z $(go fmt ./...)
 
-      - name: Run linter
-        run: staticcheck -f=stylish ./...
+      - name: Run Linter
+        uses: dominikh/staticcheck-action@v1
 
