--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
+      - name: Check Out Code
         uses: actions/checkout@v4
 
       - name: Set up Go
@@ -18,8 +18,14 @@ jobs:
         with:
           go-version: "1.24.0"
 
-      - name: Run test suite
+      - name: Run Test Suite
         run: go test -v --cover ./...
+
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Check Security
+        run: gosec ./...
 
   style:
     name: Style
