--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,3 +20,14 @@ jobs:
 
       - name: Build Project
         run: ./scripts/buildprod.sh
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+  
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+  
+      - name: 'Submit Latest Image to Google Cloud'
+        run: 'gcloud builds submit --tag us-south1-docker.pkg.dev/notely-457614/notely-ar-repo/notely:latest'
