--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,3 +31,6 @@ jobs:
   
       - name: 'Submit Latest Image to Google Cloud'
         run: 'gcloud builds submit --tag us-south1-docker.pkg.dev/notely-457614/notely-ar-repo/notely:latest'
+
+      - name: 'Deploy the Image'
+        run: 'gcloud run deploy notely --image us-south1-docker.pkg.dev/notely-457614/notely-ar-repo/notely:latest --region us-south1 --allow-unauthenticated --project notely-457614 --max-instances=4'
